--- a/src/Pages/LoginFarmer.css
+++ b/src/Pages/LoginFarmer.css
@@ -22,7 +22,7 @@ body {
     color: #333;
 }
 
-.login-containerlf input[type="tel"],
+.login-containerlf input[type="email"],
 .login-containerlf input[type="password"] {
     width: 90%;
     padding: 10px;
@@ -46,16 +46,19 @@ body {
     background-color: #218838;
 }
 
-.login-containerlf .links {
+.login-containerlf .linkslf {
     margin-top: 20px;
     text-align: center;
 }
 
-.login-containerlf .links a {
+.login-containerlf .linkslf a {
     color: #007bff;
     text-decoration: none;
 }
+.login-containerlf .linkslf p{
+    color: black;
+}
 
-.login-containerlf .links a:hover {
+.login-containerlf .linkslf a:hover {
     text-decoration: underline;
 }
