--- a/src/Pages/Signup.css
+++ b/src/Pages/Signup.css
@@ -2,14 +2,16 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
     /* background-color: #e0f0a0; */
 }
 
 .containersc {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     text-align: center;
 }
 
@@ -73,8 +75,13 @@ input[type="password"] {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin-bottom: 10px;
 }
 
 .btnsc:hover {
     background-color: #45a049;
+}
+
+.sign{
+    text-decoration: none;
 }
