--- a/src/Pages/Signupfarmer.css
+++ b/src/Pages/Signupfarmer.css
@@ -2,14 +2,15 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
     /* background-color: #e0f0a0; */
 }
 
 .containersf {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
@@ -73,6 +74,7 @@ input[type="password"] {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin-bottom: 10px;
 }
 
 .btnsf:hover {
