--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -34,12 +34,11 @@ ul {
     font-size: 24px;
 }
 
-.links {
+.links{
     gap: 10px;
-}
-.links a{
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 600;
+    color: black;
 }
 
 .legal {
